Added HDBOfficer View Project Details, Book Flat for Applicant and Generate Receipt